# Labs

./: README.md
JavaProjects/BracesChecker/: .gitignore
JavaProjects/BracesChecker/src/: BracesChecker.java  Main.java
JavaProjects/BracesChecker/src/utilites/: AbstactStack.java  Stack.java
StringAlgs/lab1/: CMakeLists.txt  main.cpp  source.py  test.py
StringAlgs/lab1/src/: funcs.h  step1_source.cpp  step1_tests.cpp  step2_source.cpp  step2_tests.cpp
StringAlgs/lab2/: step1.py  step1tests.py  step2.py  step2tests.py
